--- a/config/database.yml
+++ b/config/database.yml
@@ -15,7 +15,7 @@ default: &default
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   username: root
   password:
-  host: db
+  host: <%= ENV.fetch("MYSQL_HOST") { "localhost" } %>
 
 development:
   <<: *default
@@ -27,7 +27,6 @@ development:
 test:
   <<: *default
   database: chat_system_api_test
-  host: localhost
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
