--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,13 @@ services:
   web:
     build:
       dockerfile: Dockerfile
-    command: bundle exec rails s -p 3000 -b '0.0.0.0'
     ports:
       - '3000:3000'
     environment:
       - RAILS_ENV=development
       - REDIS_URL=redis://redis:6379
       - ELASTICSEARCH_URL=http://elasticsearch:9200
+      - MYSQL_HOST=db
     volumes:
       - .:/app
     depends_on:
